force-app/main/default/objects/Suivi_Stock_SAV__c/Suivi_Stock_SAV__c.object-meta.xml
<CustomObject>
    <label>Suivi Stock/SAV</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Nom de Suivi des stocks</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suivis Stocks/SAV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>