force-app/main/default/objects/Suivi_Stock_SAV__c/fields/D_faut_identifi_en_SAV__c.field-meta.xml
<CustomField>
    <fullName>D_faut_identifi_en_SAV__c</fullName>
    <label>Défaut identifié en SAV</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accéléromètre HS</fullName>
            </value>
            <value>
                <fullName>Audimètre en doublon</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Batterie HS</fullName>
            </value>
            <value>
                <fullName>BIP sans arrêt</fullName>
            </value>
            <value>
                <fullName>Bouton HS</fullName>
            </value>
            <value>
                <fullName>Carte SIM absente</fullName>
            </value>
            <value>
                <fullName>Carte Sim HS</fullName>
            </value>
            <value>
                <fullName>Carte SIM mal insérée</fullName>
            </value>
            <value>
                <fullName>Cassé</fullName>
            </value>
            <value>
                <fullName>Chargement HS/ne démarre pas</fullName>
            </value>
            <value>
                <fullName>Connexion beacon HS</fullName>
            </value>
            <value>
                <fullName>Connexion GSM HS</fullName>
            </value>
            <value>
                <fullName>Coque cassée/vis</fullName>
            </value>
            <value>
                <fullName>Ecran cassé</fullName>
            </value>
            <value>
                <fullName>Ecran HS</fullName>
            </value>
            <value>
                <fullName>Etiquette Code barre illisible</fullName>
            </value>
            <value>
                <fullName>Fonction Tactile HS</fullName>
            </value>
            <value>
                <fullName>HS</fullName>
            </value>
            <value>
                <fullName>Lecteur SIM HS</fullName>
            </value>
            <value>
                <fullName>Led HS</fullName>
            </value>
            <value>
                <fullName>Line in HS</fullName>
            </value>
            <value>
                <fullName>Màj BIOS</fullName>
            </value>
            <value>
                <fullName>Mauvais étiquetage</fullName>
            </value>
            <value>
                <fullName>Micro interne HS</fullName>
            </value>
            <value>
                <fullName>Ne démarre pas</fullName>
            </value>
            <value>
                <fullName>Ne s&apos;allume pas</fullName>
            </value>
            <value>
                <fullName>Pas d&apos;affichage</fullName>
            </value>
            <value>
                <fullName>Pas de charge</fullName>
            </value>
            <value>
                <fullName>Pas de marquage audio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>