force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Date_entree__c.field-meta.xml
<CustomField>
    <fullName>Date_entree__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date entrée</label>
    <type>Date</type>
</CustomField>