force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Date_retour_sous_traitance__c.field-meta.xml
<CustomField>
    <fullName>Date_retour_sous_traitance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date retour sous-traitance</label>
    <type>Date</type>
</CustomField>