force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Date_sortie__c.field-meta.xml
<CustomField>
    <fullName>Date_sortie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date sortie</label>
    <type>Date</type>
</CustomField>