force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Dernier_stock_connu__c.field-meta.xml
<CustomField>
    <fullName>Dernier_stock_connu__c</fullName>
    <label>Dernier stock connu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock général</fullName>
            </value>
            <value>
                <fullName>Stock SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>