force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>TEXT(equipement_de_mesure__r.Type_de_materiel__c) &amp; &apos; &apos; &amp;  equipement_de_mesure__r.Version_du_produit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Désignation</label>
    <type>Text</type>
</CustomField>