force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Duree_de_la_garantie__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_la_garantie__c</fullName>
    <label>Durée de la garantie</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>