force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Envoi_sous_traitance__c.field-meta.xml
<CustomField>
    <fullName>Envoi_sous_traitance__c</fullName>
    <label>Envoi sous-traitance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>