force-app/main/default/objects/Suivi_Stock_SAV__c/fields/equipement_de_mesure__c.field-meta.xml
<CustomField>
    <fullName>equipement_de_mesure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement de mesure</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Suivis Stocks/SAV</relationshipLabel>
    <relationshipName>Suivis_Stocks_SAV</relationshipName>
    <type>Lookup</type>
</CustomField>