force-app/main/default/objects/Suivi_Stock_SAV__c/fields/etat__c.field-meta.xml
<CustomField>
    <fullName>etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Rebut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>