force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Exclusion_de_garantie__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_de_garantie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusion de garantie</label>
    <type>Checkbox</type>
</CustomField>