force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Flux_entr_e__c.field-meta.xml
<CustomField>
    <fullName>Flux_entr_e__c</fullName>
    <label>Flux entrée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock général</fullName>
            </value>
            <value>
                <fullName>Retour SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>