force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Flux_sortie__c.field-meta.xml
<CustomField>
    <fullName>Flux_sortie__c</fullName>
    <label>Flux sortie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sous-traitance</fullName>
            </value>
            <value>
                <fullName>Stock général</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>