force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Magasin__c.field-meta.xml
<CustomField>
    <fullName>Magasin__c</fullName>
    <label>Magasin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock général</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>