force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Meter_Id__c.field-meta.xml
<CustomField>
    <fullName>Meter_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meter Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>