force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Nom_sous_traitant__c.field-meta.xml
<CustomField>
    <fullName>Nom_sous_traitant__c</fullName>
    <label>Nom sous-Traitant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMS</fullName>
            </value>
            <value>
                <fullName>Steliau</fullName>
            </value>
            <value>
                <fullName>Cordon</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>Omwave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>