force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Numero_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_serie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro de série</label>
    <length>33</length>
    <type>Text</type>
</CustomField>