force-app/main/default/objects/Suivi_Stock_SAV__c/fields/PN__c.field-meta.xml
<CustomField>
    <fullName>PN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PN</label>
    <length>33</length>
    <type>Text</type>
</CustomField>