force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Produit_sous_garantie__c.field-meta.xml
<CustomField>
    <fullName>Produit_sous_garantie__c</fullName>
    <formula>IF(ADDMONTHS(equipement_de_mesure__r.Date_de_production__c,equipement_de_mesure__r.Duree_de_la_garantie__c) &lt;= TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produit sous garantie</label>
    <type>Checkbox</type>
</CustomField>