force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Reference_de_suivi_RMA__c.field-meta.xml
<CustomField>
    <fullName>Reference_de_suivi_RMA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference de suivi (RMA)</label>
    <length>33</length>
    <type>Text</type>
</CustomField>