force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Reparation_effectuee__c.field-meta.xml
<CustomField>
    <fullName>Reparation_effectuee__c</fullName>
    <label>Réparation effectuée</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changement afficheur LCD</fullName>
            </value>
            <value>
                <fullName>Changement Batterie</fullName>
            </value>
            <value>
                <fullName>Changement Bouton M/A</fullName>
            </value>
            <value>
                <fullName>Changement bouton ON/OFF</fullName>
            </value>
            <value>
                <fullName>Changement Carte alim</fullName>
            </value>
            <value>
                <fullName>Changement Carte Audio-USB</fullName>
            </value>
            <value>
                <fullName>Changement Carte Mère</fullName>
            </value>
            <value>
                <fullName>Changement Carte wifi</fullName>
            </value>
            <value>
                <fullName>Changement Compact Flash</fullName>
            </value>
            <value>
                <fullName>Changement Coque arrière</fullName>
            </value>
            <value>
                <fullName>Changement coque inférieure</fullName>
            </value>
            <value>
                <fullName>Changement coque supérieure équipée</fullName>
            </value>
            <value>
                <fullName>Changement DDR</fullName>
            </value>
            <value>
                <fullName>Changement du connecteur wifi</fullName>
            </value>
            <value>
                <fullName>Changement écran tactil</fullName>
            </value>
            <value>
                <fullName>Changement Lecteur Flash</fullName>
            </value>
            <value>
                <fullName>Changement mère</fullName>
            </value>
            <value>
                <fullName>Changement Nappe IDE</fullName>
            </value>
            <value>
                <fullName>Changement Nappes</fullName>
            </value>
            <value>
                <fullName>Changement Pile mémoire</fullName>
            </value>
            <value>
                <fullName>Flashage Meter</fullName>
            </value>
            <value>
                <fullName>Injection IMEI</fullName>
            </value>
            <value>
                <fullName>Màj bios</fullName>
            </value>
            <value>
                <fullName>Màj Version</fullName>
            </value>
            <value>
                <fullName>Reétiquettage code barre</fullName>
            </value>
            <value>
                <fullName>Remplacement antenne GSM</fullName>
            </value>
            <value>
                <fullName>Remplacement Antenne Wifi</fullName>
            </value>
            <value>
                <fullName>Remplacement batterie 880 mAh / 3,8V</fullName>
            </value>
            <value>
                <fullName>Remplacement Carte Electronique</fullName>
            </value>
            <value>
                <fullName>Remplacement écran tactile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>