force-app/main/default/objects/Suivi_Stock_SAV__c/fields/Suivi_Stock_SAV_ExtId__c.field-meta.xml
<CustomField>
    <fullName>Suivi_Stock_SAV_ExtId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Suivi_Stock_SAV_ExtId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>