force-app/main/default/objects/Suivi_Stock_SAV__c/listViews/Tout_les_Suivi_Stocks_SAV.listView-meta.xml
<ListView>
    <fullName>Tout_les_Suivi_Stocks_SAV</fullName>
    <columns>NAME</columns>
    <columns>Date_entree__c</columns>
    <columns>Date_envoi_en_sous_traitance__c</columns>
    <columns>Date_retour_sous_traitance__c</columns>
    <columns>Date_sortie__c</columns>
    <columns>Duree_de_la_garantie__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les Suivi Stocks/SAV</label>
</ListView>